test(reservations): reservations documenteation implemented
